--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Week 5 Assignment</title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
   </head>
-  <body>
-    <h1>Week 5 Assignment - Part 2</h1>
+  <body class="body">
+    <header class="header">
+      <h1>Week 5 Assignment - Part 2</h1>
+      <h2>Tormod Sletteboe's Record Shop</h2>
+    </header>
+   <main class="main">
     <p>See console for output.</p>
+   </main>
+    
     <!-- Create an unordered list with any questions you have -->
   </body>
 </html>
